--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,9 @@
-/* Make body a flex container */
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-}
-
-/* Hide scrollbars */
-body {
-    overflow: hidden;
-  }
-
 /* Size and style surprise image */
 #surpriseImage {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     object-fit: contain;
     max-height: 70vh;
     max-width: 70vw;
