--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,22 @@ body {
     width: 100%;
     height: 100%;
   }
+
+/* Default button styling */
+button {
+    background-color: pink;
+    border: none;
+    padding: 20px 20px;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+}
+
+/* Position and style reset button */
+#resetButton {
+    position: absolute;
+    top: 67%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
