--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,68 @@ button {
     margin-top: 20px;
 }
 
-/* Postion reset button */
-#resetButton {
+/* Style modals (from W3Schools modal tutorial, with my added customizations) */
+
+/* Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal content box */
+  .modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 30vh;
     margin: 0 auto;
-}
+    padding: 100px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 20px rgba(0, 0, 0, .2);
+    background-color: #fefefe;
+    font-family: Arial, sans-serif;
+  }
+  
+  /* Close button */
+  .close {
+    color: #aaa;
+    position: absolute;
+    top: 0;
+    right: 10px;
+    font-size: 60px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  /* Style theme buttons */
+  .themeButton {
+    margin-top: 50px;
+  }
+
+  p {
+    font-size: 36px;
+    text-align: left;
+  }
+
+  h1 {
+    font-size: 48px;
+  }
+
+  .buttons-container button {
+    margin: 0 50px;
+  }
