--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
+    overscroll-behavior: none;
   }
 
 /* Default button styling */
@@ -88,9 +89,9 @@ button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 30vh;
+    width: 40vh;
     margin: 0 auto;
-    padding: 100px;
+    padding: 5vh;
     border-radius: 20px;
     box-shadow: 2px 2px 20px rgba(0, 0, 0, .2);
     background-color: #fefefe;
@@ -116,7 +117,7 @@ button {
 
   /* Style theme buttons */
   .themeButton {
-    margin-top: 50px;
+    margin-bottom: 5vh;
   }
 
   p {
