--- a/styles.css
+++ b/styles.css
@@ -56,16 +56,14 @@ button {
     margin: 0 auto;
     text-align: center;
     margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .buttons-container button {
     margin: 0 10px;
   }
-
-/* Style reset button */
-#resetButton {
-    font-size: 2rem;
-}
 
 /* Style modals (from W3Schools modal tutorial, with my added customizations) */
 
