--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,8 @@ button {
 @media only screen and (min-width: 768px) {
     .buttons-container {
         margin-top: 50px;
-        width: 30vh;
         gap: 50px;
+        width: 20%;
     }
 } 
 
