--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 
 /* Default button styling */
 button {
-    background-color: pink;
+    background-color: #FFE4EF;
     border: none;
     margin: 0 10px;
     padding: 10px 10px;
